responsive nav-bar

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -2,6 +2,7 @@ body {
     background-color: $white;
     font-family: $ff-raleway;
     line-height: 1.5;
+    letter-spacing: 0.2rem;
 }
 
 .container {
