mobile first products section

--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -2,3 +2,6 @@ $main-green: #00c49d;
 $black: #000000;
 $white: #ffffff;
 $border-gray: #c1c1c1;
+$background-gray: #f1f1f1;
+$font-gray: #909090;
+$bg-opacity: rgba(255, 255, 255, 0.5);
