--- a/src/scss/partials/_slider.scss
+++ b/src/scss/partials/_slider.scss
@@ -10,8 +10,7 @@
         width: 100%;
         height: 20rem;
         background-image: url(../../img/black_chair.png);
-        background-repeat: no-repeat;
-        background-position: center;
+        @include bg-img();
         background-size: auto;
     }
 
@@ -42,7 +41,7 @@
             font-family: $ff-raleway;
             font-size: 1.3rem;
             border: none;
-            border-radius: .8rem;
+            border-radius: .5rem;
             background-color: $main-green;
             color: $white;
         }
