mobile first price box

--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -4,4 +4,14 @@ $white: #ffffff;
 $border-gray: #c1c1c1;
 $background-gray: #f1f1f1;
 $font-gray: #909090;
+$title-gray: #575757;
+$bg-option: #f9f9f9;
+$el-1-font: #747474;
+$el-1-bg: #e3e3e3;
+$el-2-font: #6f6f6f;
+$el-2-bg: $background-gray;
+$md-1-font: #a5a5a5;
+$md-1-bg: $white;
+$md-2-font: #9d9d9d;
+$md-2-bg: $background-gray;
 $bg-opacity: rgba(255, 255, 255, 0.5);
