--- a/src/scss/modules/_mixins.scss
+++ b/src/scss/modules/_mixins.scss
@@ -21,3 +21,12 @@
     height: .4rem;
     background-color: $main-green;
 }
+
+@mixin input-look() {
+    width: 100%;
+    height: 3rem;
+    border: 1px solid $main-green;
+    font-size: 1.5rem;
+    padding: 0 0 0 .5rem;
+    margin: 0 0 1.5rem 0;
+}
