--- a/src/scss/partials/_products.scss
+++ b/src/scss/partials/_products.scss
@@ -8,13 +8,13 @@
 
         .product-box {
             width: 100%;
-            height: 10rem;
+            height: 14rem;
             margin: 2.3rem 0 0 0;
 
             .product-title {
                 width: 100%;
                 height: 3rem;
-                margin: 6rem 0 0 0;
+                margin: 9.5rem 0 1.5rem 0;
                 background-color: $bg-opacity;
                 display: flex;
                 justify-content: center;
