mobile first layout finished

--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -14,4 +14,7 @@ $md-1-font: #a5a5a5;
 $md-1-bg: $white;
 $md-2-font: #9d9d9d;
 $md-2-bg: $background-gray;
+$label-text: #aaa9aa;
+$footer-font: #888888;
+
 $bg-opacity: rgba(255, 255, 255, 0.5);
