--- a/src/scss/partials/_price-box.scss
+++ b/src/scss/partials/_price-box.scss
@@ -139,3 +139,27 @@
         }
     }
 }
+
+@media (min-width: 768px) {
+    
+    #price-list {
+
+        .container {
+            
+            .options-box {
+                flex-direction: row;
+                flex-flow: wrap;
+                justify-content: space-between;
+                align-items: center;
+
+                .product-option {
+                    width: 45%;
+                }
+
+                .last {
+                    margin: 0 0 2rem 27.5%; 
+                }
+            }
+        }
+    }
+}
