--- a/src/scss/partials/_products.scss
+++ b/src/scss/partials/_products.scss
@@ -81,4 +81,35 @@
         }
     }
 
+    @media (min-width: 768px) {
+
+        .container {
+            width: 80%;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .product-box {
+                width: 80%;
+                height: 18rem;
+
+                .product-title {
+                    margin: 13.5rem 0 1.5rem 0;
+                }
+            }
+
+            .product-description {
+                border: 1px solid $border-gray;
+                
+                h4 {
+                    padding: 1.5rem 0 0 1.5rem;
+                }
+
+                p {
+                    padding: 1.5rem 0 0 1.5rem;
+                    margin: 0;
+                }
+            }
+        }
+    }
 }
