--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -31,30 +31,6 @@
 
             label {
                 cursor: pointer;
-                
-                // @media (min-width: 768px) {
-
-                //     #checkbox {
-                //         display: none;
-    
-                //         + .label-text::before {
-                //             content: '';
-                //             display: block;
-                //             width: 3rem;
-                //             height: 2.7rem;
-                //             background-color: transparent;
-                //             border: 1px solid $main-green;
-                //             border-radius: .2rem;
-                //             margin: 0 1rem 0 0;
-                //             padding: .3rem 0 0 0;
-                //             float: left;
-                //         }
-    
-                //         &:checked + .label-text::before {
-                //             content: url(../../img/form_ok.jpg);
-                //         }
-                //     }
-                // }
             }
         }
 
@@ -74,6 +50,62 @@
                 font-weight: $fw-bolder;
                 font-size: 2rem;
                 text-transform: uppercase;
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    #contact-form {
+
+        form {
+            display: flex;
+
+            .inputs-box {
+                width: 60%;
+
+                .input {
+                    height: 4.5rem;
+                }
+
+                .input-message {
+                    height: 12rem;
+                }
+            }
+
+            .submit-box {
+                width: 40%;
+                display: flex;
+                flex-direction: column;
+
+                // .checkbox-div {
+
+                //     label {
+                //         @media (min-width: 1024px) {
+
+                //             #checkbox {
+                //                 display: none;
+            
+                //                 + .label-text::before {
+                //                     content: '';
+                //                     display: block;
+                //                     width: 3rem;
+                //                     height: 2.7rem;
+                //                     background-color: transparent;
+                //                     border: 1px solid $main-green;
+                //                     border-radius: .2rem;
+                //                     margin: 0 1rem 0 0;
+                //                     padding: .3rem 0 0 0;
+                //                     float: left;
+                //                 }
+            
+                //                 &:checked + .label-text::before {
+                //                     content: url(../../img/form_ok.jpg);
+                //                 }
+                //             }
+                //         }
+                //     }
+                // }
             }
         }
     }
