--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -16,5 +16,6 @@ $md-2-font: #9d9d9d;
 $md-2-bg: $background-gray;
 $label-text: #aaa9aa;
 $footer-font: #888888;
+$hover-color: #f45042;
 
 $bg-opacity: rgba(255, 255, 255, 0.5);
