--- a/src/scss/partials/_slider.scss
+++ b/src/scss/partials/_slider.scss
@@ -44,6 +44,11 @@
             border-radius: .5rem;
             background-color: $main-green;
             color: $white;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: $hover-color;
         }
     }
 
@@ -77,6 +82,11 @@
                     width: 100%;
                     font-size: 7rem;
                     color: $main-green;
+                }
+
+                .arrow:hover {
+                    color: $hover-color;
+                    cursor: pointer;
                 }
 
                 .left {
