--- a/src/scss/partials/_contact.scss
+++ b/src/scss/partials/_contact.scss
@@ -50,6 +50,7 @@
                 font-weight: $fw-bolder;
                 font-size: 2rem;
                 text-transform: uppercase;
+                transition: .3s;
             }
 
             #form-btn:hover {
