--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -15,11 +15,16 @@ header {
         a {
             text-decoration: none;
             color: $white;
+            transition: .7s;
 
             span {
                 color: $main-green;
                 font-weight: $fw-b;
             }
+        }
+
+        a:hover {
+            font-size: 1rem;
         }
     }
 
@@ -40,6 +45,7 @@ header {
                 a {
                     text-decoration: none;
                     color: $white;
+                    transition: .5s;
                 }
 
                 a:hover {
