--- a/src/scss/partials/_products.scss
+++ b/src/scss/partials/_products.scss
@@ -10,6 +10,7 @@
             width: 100%;
             height: 14rem;
             margin: 2.3rem 0 0 0;
+            transition: 1.5s;
 
             .product-title {
                 width: 100%;
