--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -15,16 +15,11 @@ header {
         a {
             text-decoration: none;
             color: $white;
-            transition: .7s;
 
             span {
                 color: $main-green;
                 font-weight: $fw-b;
             }
-        }
-
-        a:hover {
-            font-size: 1rem;
         }
     }
 
@@ -65,6 +60,14 @@ header {
             h1 {
                 padding: .5rem 0;
                 font-size: 0.8rem;
+
+                a {
+                    transition: .7s;
+                }
+
+                a:hover {
+                    font-size: 1rem;
+                }
             }
 
             nav {
